Cinder manager support -- fix specs

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1276,7 +1276,7 @@
         :poll: 1.seconds
       :event_catcher_atomic_enterprise:
         :poll: 1.seconds
-      :event_catcher_cinder_storage:
+      :event_catcher_cinder:
         :poll: 10.seconds
     :queue_worker_base:
       :defaults:
@@ -1338,8 +1338,7 @@
         :ems_refresh_worker_vmware: {}
         :ems_refresh_worker_vmware_cloud: {}
         :ems_refresh_worker_vmware_cloud_network: {}
-        :ems_refresh_worker_cinder_storage: {}
-        :ems_refresh_worker_swift_storage: {}
+        :ems_refresh_worker_cinder: {}
       :event_handler:
         :cpu_usage_threshold: 0.percent
         :nice_delta: 7
