Enhancement to expose the Automate model via /api/automate
- /api/automate
- Adding support for depth and optional search_options
- Default depth of 1 for /api/automate (domain discovery)
- depth of -1 for unlimited depth
- Updated API CLI to support --depth as well as --search-options

PivotalTracker: https://www.pivotaltracker.com/story/show/121850007

--- a/config/api.yml
+++ b/config/api.yml
@@ -47,6 +47,21 @@
     :options:
     - :primary
     :verbs: *gd
+  :automate:
+    :description: Automate
+    :options:
+    - :arbitrary_resource_path
+    - :collection
+    :verbs: *g
+    :klass: MiqAeDomain
+    :collection_actions:
+      :get:
+      - :name: read
+        :identifier: miq_ae_domain_view
+    :resource_actions:
+      :get:
+      - :name: read
+        :identifier: miq_ae_domain_view
   :automation_requests:
     :description: Automation Requests
     :options:
