--- a/db/fixtures/ae_datastore/ManageIQ/Cloud/VM/Provisioning/StateMachines/Methods.class/postprovision.yaml
+++ b/db/fixtures/ae_datastore/ManageIQ/Cloud/VM/Provisioning/StateMachines/Methods.class/postprovision.yaml
@@ -14,3 +14,5 @@ object:
       value: openstack_PostProvision
   - azure_meth1:
       value: PostProvision
+  - google_meth1:
+      value: PostProvision
