--- a/db/fixtures/ae_datastore/ManageIQ/Cloud/VM/Provisioning/StateMachines/Methods.class/preprovision.yaml
+++ b/db/fixtures/ae_datastore/ManageIQ/Cloud/VM/Provisioning/StateMachines/Methods.class/preprovision.yaml
@@ -14,3 +14,5 @@ object:
       value: openstack_PreProvision
   - azure_meth1:
       value: PreProvision
+  - google_meth1:
+      value: PreProvision
