--- a/db/fixtures/miq_product_features.yml
+++ b/db/fixtures/miq_product_features.yml
@@ -5481,3 +5481,7 @@
       :description: Remove Blueprint
       :feature_type: admin
       :identifier: blueprint_delete
+    - :name: Publish
+      :description: Publish Blueprint
+      :feature_type: admin
+      :identifier: blueprint_publish
