sysprep_product_id set to required false
https://bugzilla.redhat.com/show_bug.cgi?id=1353685

--- a/product/dialogs/miq_dialogs/miq_provision_vmware_dialogs_clone_to_vm.yaml
+++ b/product/dialogs/miq_dialogs/miq_provision_vmware_dialogs_clone_to_vm.yaml
@@ -202,7 +202,7 @@
         :sysprep_product_id:
           :description: ProductID
           :required_method: :validate_sysprep_field
-          :required: true
+          :required: false
           :display: :edit
           :data_type: :string
         :sysprep_identification:
