--- a/bower.json
+++ b/bower.json
@@ -49,10 +49,12 @@
     "qs": "^0.3.10",
     "rxjs": "^4.1.0",
     "rx-angular": "rx.angular#^1.1.3",
-    "manageiq-ui-components": "~0.0.7"
+    "manageiq-ui-components": "~0.0.7",
+    "patternfly-bootstrap-treeview": "~2.1.0"
   },
   "resolutions": {
     "moment": ">=2.9.0",
-    "d3": "~3.5.0"
+    "d3": "~3.5.0",
+    "patternfly-bootstrap-treeview": "~2.1.0"
   }
 }
