--- a/db/fixtures/miq_policy_sets.yml
+++ b/db/fixtures/miq_policy_sets.yml
@@ -54,6 +54,21 @@
           description: Prevent container image from running on OpenShift
           action_type: default
           options: {}
+      - qualifier: success
+        success_sequence: 1
+        success_synchronous: true
+        MiqEventDefinition:
+          name: containerimage_compliance_check
+          description: Container Image Compliance Check
+          event_type: Default
+          definition:
+          default:
+          enabled:
+        MiqAction:
+          name: container_image_annotate_allow_execution
+          description: Mark container image as safe for running on OpenShift
+          action_type: default
+          options: {}
       Condition:
       - name: if container image has high severity openscap rule results
         description: Has high severity OpenSCAP rule results
