Add KubeVirt provider
This patch integrates adds the changes needed to integrate the KubeVirt
provider with the rest of the system.

Signed-off-by: Juan Hernandez <juan.hernandez@redhat.com>

--- a/config/permissions.tmpl.yml
+++ b/config/permissions.tmpl.yml
@@ -40,6 +40,7 @@
 - ems-type:hawkular_datawarehouse
 - ems-type:kubernetes
 - ems-type:kubernetes_monitor
+- ems-type:kubevirt
 - ems-type:lenovo_ph_infra
 - ems-type:nuage_network
 - ems-type:openshift
