add metrics default limit to api settings

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -2,6 +2,7 @@
 :api:
   :token_ttl: 10.minutes
   :authentication_timeout: 30.seconds
+  :metrics_default_limit: 1000
 :authentication:
   :basedn:
   :bind_dn:
