--- a/db/fixtures/miq_product_features.yml
+++ b/db/fixtures/miq_product_features.yml
@@ -6103,6 +6103,19 @@
       :description: Manage Policies of Block Storage Managers
       :feature_type: control
       :identifier: ems_block_storage_protect
+    - :name: Refresh
+      :description: Refresh Block Storage Managers
+      :feature_type: control
+      :identifier: ems_block_storage_refresh
+  - :name: Modify
+    :description: Modify Block Storage Managers
+    :feature_type: admin
+    :identifier: ems_block_storage_admin
+    :children:
+    - :name: Remove
+      :description: Remove Block Storage Manager
+      :feature_type: admin
+      :identifier: ems_block_storage_delete
 
 # EmsObjectStorage
 - :name: Object Storage Managers
