--- a/config/miq_expression.yml
+++ b/config/miq_expression.yml
@@ -68,6 +68,8 @@
   - ManageIQ::Providers::InfraManager::Vm
   - VmPerformance
   - Zone
+  - ManageIQ::Providers::MiddlewareManager
+  - MiddlewareServer
 :include_tables:
   - advanced_settings
   - archived_container_groups
@@ -113,6 +115,10 @@
   - lans
   - last_compliances
   - linux_initprocesses
+  - middleware_servers
+  - middleware_messagings
+  - middleware_deployments
+  - middleware_datasources
   - miq_actions
   - miq_approval_stamps
   - miq_custom_attributes
@@ -232,6 +238,8 @@
   ContainerService: container_service
   ContainerTemplate: container_template
   PersistentVolume: persistent_volume
+  ManageIQ::Providers::MiddlewareManager: ext_management_system
+  MiddlewareServer: middleware_server
 :exclude_from_relats:
   ManageIQ::Providers::CloudManager:
     - hosts
