--- a/Procfile.example
+++ b/Procfile.example
@@ -6,21 +6,21 @@
 # So, the first ui worker will get PORT=3000 while the next will get PORT=3001
 # The first api worker will get PORT=3100 and the next will get PORT=3101
 
-# ui:        env PORT=$PORT bundle exec rails r lib/workers/bin/run_single_worker.rb MiqUiWorker
-# api:       env PORT=$PORT bundle exec rails r lib/workers/bin/run_single_worker.rb MiqWebServiceWorker
-# websocket: env PORT=$PORT bundle exec rails r lib/workers/bin/run_single_worker.rb MiqWebsocketWorker
+# ui:        env PORT=$PORT ruby lib/workers/bin/run_single_worker.rb MiqUiWorker
+# api:       env PORT=$PORT ruby lib/workers/bin/run_single_worker.rb MiqWebServiceWorker
+# websocket: env PORT=$PORT ruby lib/workers/bin/run_single_worker.rb MiqWebsocketWorker
 
-# schedule: bundle exec rails r lib/workers/bin/run_single_worker.rb MiqScheduleWorker
+# schedule: ruby lib/workers/bin/run_single_worker.rb MiqScheduleWorker
 
 # Queue workers
 # These workers use a default queue defined in their classes
 # We do not need to pass them a queue name
 
-# generic:           bundle exec rails r lib/workers/bin/run_single_worker.rb MiqGenericWorker
-# priority:          bundle exec rails r lib/workers/bin/run_single_worker.rb MiqPriorityWorker
-# event:             bundle exec rails r lib/workers/bin/run_single_worker.rb MiqEventHandler
-# reporting:         bundle exec rails r lib/workers/bin/run_single_worker.rb MiqReportingWorker
-# metrics_processor: bundle exec rails r lib/workers/bin/run_single_worker.rb MiqEmsMetricsProcessorWorker
+# generic:           ruby lib/workers/bin/run_single_worker.rb MiqGenericWorker
+# priority:          ruby lib/workers/bin/run_single_worker.rb MiqPriorityWorker
+# event:             ruby lib/workers/bin/run_single_worker.rb MiqEventHandler
+# reporting:         ruby lib/workers/bin/run_single_worker.rb MiqReportingWorker
+# metrics_processor: ruby lib/workers/bin/run_single_worker.rb MiqEmsMetricsProcessorWorker
 
 # Provider workers
 #
@@ -29,16 +29,16 @@
 # VMware example
 # The following workers should be started to work with a VMware infrastructure EMS
 
-# vim_broker:     bundle exec rails r lib/workers/bin/run_single_worker.rb MiqVimBrokerWorker
-# vmware_metrics: bundle exec rails r lib/workers/bin/run_single_worker.rb ManageIQ::Providers::Vmware::InfraManager::MetricsCollectorWorker
+# vim_broker:     ruby lib/workers/bin/run_single_worker.rb MiqVimBrokerWorker
+# vmware_metrics: ruby lib/workers/bin/run_single_worker.rb ManageIQ::Providers::Vmware::InfraManager::MetricsCollectorWorker
 
 # Per EMS queue workers
 # These workers subscribe to a queue named based on the particular EMS they connect to
 # The "<id>" tag in these lines should be replaced by the id of the manager instance these workers apply to
 
-# vmware_refresh_<id>:      env QUEUE=ems_<id> bundle exec rails r lib/workers/bin/run_single_worker.rb ManageIQ::Providers::Vmware::InfraManager::RefreshWorker
-# vmware_event_<id>:        env QUEUE=ems_<id> bundle exec rails r lib/workers/bin/run_single_worker.rb ManageIQ::Providers::Vmware::InfraManager::EventCatcher
-# vmware_refresh_core_<id>: env QUEUE=ems_<id> bundle exec rails r lib/workers/bin/run_single_worker.rb MiqEmsRefreshCoreWorker
+# vmware_refresh_<id>:      env QUEUE=ems_<id> ruby lib/workers/bin/run_single_worker.rb ManageIQ::Providers::Vmware::InfraManager::RefreshWorker
+# vmware_event_<id>:        env QUEUE=ems_<id> ruby lib/workers/bin/run_single_worker.rb ManageIQ::Providers::Vmware::InfraManager::EventCatcher
+# vmware_refresh_core_<id>: env QUEUE=ems_<id> ruby lib/workers/bin/run_single_worker.rb MiqEmsRefreshCoreWorker
 
 # Logs
 #
