Split up miq_capacity into three separate controllers

--- a/db/fixtures/miq_shortcuts.yml
+++ b/db/fixtures/miq_shortcuts.yml
@@ -456,22 +456,17 @@
   :startup: true
 - :name: utilization
   :description: Optimize / Utilization
-  :url: /miq_capacity/utilization
-  :rbac_feature_name: utilization
-  :startup: true
-- :name: utilization
-  :description: Optimize / Utilization
-  :url: /miq_capacity
+  :url: /utilization
   :rbac_feature_name: utilization
   :startup: true
 - :name: planning
   :description: Optimize / Planning
-  :url: /miq_capacity/planning
+  :url: /planning
   :rbac_feature_name: planning
   :startup: true
 - :name: bottlenecks
   :description: Optimize / Bottlenecks
-  :url: /miq_capacity/bottlenecks
+  :url: /bottlenecks
   :rbac_feature_name: bottlenecks
   :startup: true
 - :name: monitor_alerts_overview
