--- a/config/settings.yml
+++ b/config/settings.yml
@@ -144,6 +144,7 @@
   :openshift:
     :refresh_interval: 15.minutes
     :get_container_images: true
+    :store_unused_images: true
   :raise_vm_snapshot_complete_if_created_within: 15.minutes
   :refresh_interval: 24.hours
   :scvmm:
