--- a/config/settings.yml
+++ b/config/settings.yml
@@ -159,9 +159,11 @@
   :openshift:
     :get_container_images: true
     :refresh_interval: 15.minutes
+    :store_unused_images: true
   :openshift_enterprise:
     :get_container_images: true
     :refresh_interval: 15.minutes
+    :store_unused_images: true
   :raise_vm_snapshot_complete_if_created_within: 15.minutes
   :refresh_interval: 24.hours
   :scvmm:
