User sync feature
Adds a new feature to allow syncing of users from a cloud provider.
It is identified as ems_cloud_user_sync.

--- a/db/fixtures/miq_product_features.yml
+++ b/db/fixtures/miq_product_features.yml
@@ -446,6 +446,10 @@
       :description: Add a Cloud Provider
       :feature_type: admin
       :identifier: ems_cloud_new
+    - :name: Sync Users
+      :description: Sync Users from Cloud Provider
+      :feature_type: admin
+      :identifier: ems_cloud_user_sync
 
 # Cloud Topology
 - :name: Cloud Topology
