--- a/db/fixtures/miq_user_roles.yml
+++ b/db/fixtures/miq_user_roles.yml
@@ -42,7 +42,7 @@
   - container_service
   - container_replicator
   - container_group
-  - containers
+  - container
   - container_node
   - persistent_volume
   - container_build
@@ -1017,7 +1017,7 @@
   - container_service
   - container_route
   - container_project
-  - containers
+  - container
   - container_topology
   - container_dashboard
   - ems_infra_dashboard
