Fix Chargeable Storage rate description typo
https://bugzilla.redhat.com/show_bug.cgi?id=1487433

--- a/db/fixtures/chargeable_fields.yml
+++ b/db/fixtures/chargeable_fields.yml
@@ -41,12 +41,12 @@
   :group: fixed
   :source: compute_2
 - :metric: derived_vm_allocated_disk_storage
-  :description: Allocated Disk Storag
+  :description: Allocated Disk Storage
   :group: storage
   :source: allocated
   :measure: Bytes Units
 - :metric: derived_vm_used_disk_storage
-  :description: Used Disk Storag
+  :description: Used Disk Storage
   :group: storage
   :source: used
   :measure: Bytes Units
