Ruby 2.4 - Replace all Fixnum|Bignum
Both are deprecated in favor of Integer

https://bugs.ruby-lang.org/issues/12005

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -912,7 +912,7 @@
   :mem_minimum: 32.megabytes
 :reporting:
   :format_by_class:
-    :Fixnum:
+    :Integer:
       :function:
         :name: number_with_delimiter
     :Float:
