Increase Timeouts and Worker Memory for Azure SSA
In support of high priority BZ https://bugzilla.redhat.com/show_bug.cgi?id=1488967
we need to increase various timeouts to allow the Azure SSA job to succeed.
1) Increase the Job timeout specific to Azure SSA similar to how it has been
   done for SCVMM previously.
2) Increase the SmartProxyWorker MiqQueue msg_timeout value similar to how it has
   been done for both SCVMM and OpenStack previously.
3) Increase the memory_threshold and restart_interval for all SmartProxyWorker jobs.
   The memory_threshold issue has been seen running SSA on other providers as well as
   Azure so the overall default change here is appropriate.

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1137,9 +1137,9 @@
         :nice_delta: 7
       :smart_proxy_worker:
         :count: 2
-        :memory_threshold: 600.megabytes
+        :memory_threshold: 2.gigabytes
         :queue_timeout: 20.minutes
-        :restart_interval: 2.hours
+        :restart_interval: 6.hours
     :schedule_worker:
       :container_entities_purge_interval: 1.day
       :authentication_check_interval: 1.hour
