--- a/db/fixtures/notification_types.yml
+++ b/db/fixtures/notification_types.yml
@@ -234,3 +234,23 @@
   :expires_in: 24.hours
   :level: :error
   :audience: global
+- :name: cloud_volume_snapshot_create_success
+  :message: 'Creating Snapshot %{snapshot_name} of Volume %{volume_name} completed successfully.'
+  :expires_in: 24.hours
+  :level: :success
+  :audience: global
+- :name: cloud_volume_snapshot_create_error
+  :message: 'Creating Snapshot %{snapshot_name} of Volume %{volume_name} failed: %{error_message}'
+  :expires_in: 24.hours
+  :level: :error
+  :audience: global
+- :name: cloud_volume_snapshot_delete_success
+  :message: 'Deleting Snapshot %{subject} of Volume %{volume_name} completed successfully.'
+  :expires_in: 24.hours
+  :level: :success
+  :audience: global
+- :name: cloud_volume_snapshot_delete_error
+  :message: 'Deleting Snapshot %{subject} of Volume %{volume_name} failed: %{error_message}'
+  :expires_in: 24.hours
+  :level: :error
+  :audience: global
