--- a/db/fixtures/miq_product_features.yml
+++ b/db/fixtures/miq_product_features.yml
@@ -6456,13 +6456,18 @@
       :feature_type: view
       :identifier: monitor_alerts_most_recent
 
-# Metrics
-- :name: Metrics
-  :description: Everything under Metrics
+# API
+- :name: API
+  :description: Features Exclusive to the API
   :feature_type: node
-  :identifier: metrics
+  :identifier: api_exclusive
   :children:
-  - :name: View
-    :description: View Metrics
-    :feature_type: view
-    :identifier: metrics_view
+  - :name: Metrics
+    :description: Everything under Metrics
+    :feature_type: node
+    :identifier: metrics
+    :children:
+    - :name: View
+      :description: View Metrics
+      :feature_type: view
+      :identifier: metrics_view
