--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1056,6 +1056,10 @@
       :starting_timeout: 20.minutes
       :poll: 10.seconds
       :memory_threshold: 0.megabytes
+    :amazon_agent_manager_worker:
+      :starting_timeout: 20.minutes
+      :poll: 10.seconds
+      :memory_threshold: 0.megabytes
     :ems_refresh_core_worker:
       :poll: 1.seconds
       :nice_delta: 1
@@ -1137,6 +1141,11 @@
         :memory_threshold: 2.gigabytes
         :queue_timeout: 20.minutes
         :restart_interval: 6.hours
+      :amazon_agent_manager_worker:
+        :count: 1
+        :memory_threshold: 600.megabytes
+        :queue_timeout: 20.minutes
+        :restart_interval: 2.hours
     :schedule_worker:
       :container_entities_purge_interval: 1.day
       :authentication_check_interval: 1.hour
