Use more descriptive name for seal template
https://bugzilla.redhat.com/show_bug.cgi?id=1373076

--- a/product/dialogs/miq_dialogs/miq_provision_redhat_dialogs_clone_to_template.yaml
+++ b/product/dialogs/miq_dialogs/miq_provision_redhat_dialogs_clone_to_template.yaml
@@ -221,7 +221,7 @@
           :display: :edit
           :default: false
           :data_type: :boolean
-        :seal:
+        :seal_template:
           :description: Seal Template
           :notes: (Applicable for non-Windows OS only)
           :validation_method: :validate_seal_template
