Move default NTP server settings from constant to Settings
Part of:
https://bugzilla.redhat.com/show_bug.cgi?id=1476365

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -870,6 +870,11 @@
   :level_scvmm: info
   :level_vim: warn
   :level_websocket: info
+:ntp:
+  :server:
+  - 0.pool.ntp.org
+  - 1.pool.ntp.org
+  - 2.pool.ntp.org
 :performance:
   :capture_threshold:
     :default: 10.minutes
