ovn: introducing ovn as ovirt's network provider
oVirts network provider has 'neutron like' api. Therefore, it has tenants.
Since oVirt provider is infra provider (and not cloud provider), tenants
had to be extracted to support infra provider as parent ems.

--- a/config/permissions.tmpl.yml
+++ b/config/permissions.tmpl.yml
@@ -46,6 +46,7 @@
 - ems-type:openstack
 - ems-type:openstack_infra
 - ems-type:openstack_network
+- ems-type:redhat_network
 - ems-type:rhevm
 - ems-type:scvmm
 - ems-type:swift
