--- a/db/fixtures/miq_product_features.yml
+++ b/db/fixtures/miq_product_features.yml
@@ -6499,3 +6499,7 @@
     :description: Display the App Launcher
     :feature_type: view
     :identifier: sui_app_launcher
+  - :name: Notifications
+    :description: Display notifications
+    :feature_type: view
+    :identifier: sui_notifications
