move queue settings to prototype

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -910,7 +910,11 @@
   :maindb: ExtManagementSystem
   :container_deployment_wizard: false
 :prototype:
-  :queue_type: artemis
+  :queue_type: miq_queue
+  :queue_hostname: localhost
+  :queue_port: 61616
+  :queue_username: admin
+  :queue_password: smartvm
 :recommendations:
   :cpu_minimum: 1
   :mem_minimum: 32.megabytes
@@ -1117,10 +1121,6 @@
       :event_handler:
         :cpu_usage_threshold: 0.percent
         :nice_delta: 7
-        :queue_hostname: localhost
-        :queue_port: 61616
-        :queue_username: admin
-        :queue_password: smartvm
       :generic_worker:
         :count: 2
       :priority_worker:
