move artemis settings

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -911,10 +911,11 @@
   :container_deployment_wizard: false
 :prototype:
   :queue_type: miq_queue
-  :queue_hostname: localhost
-  :queue_port: 61616
-  :queue_username: admin
-  :queue_password: smartvm
+  :artemis:
+    :queue_hostname: localhost
+    :queue_port: 61616
+    :queue_username: admin
+    :queue_password: smartvm
 :recommendations:
   :cpu_minimum: 1
   :mem_minimum: 32.megabytes
